<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="titulo">Titulo</string>
    <string name="biologia">Biología</string>
    <string name="historia">Historia</string>
    <string name="matematicas">Matemáticas</string>
    <string name="lenguaje">Lenguaje</string>
    <string name="fisica">Física</string>
    <string name="no_hay_nuevas_preguntas">No Hay Nuevas Preguntas</string>
</resources>